# reflect

./: .gitignore  CMakeLists.txt  ReadMe.md  Test.hpp  Test.reflect.hpp  main.cpp  reflect.py  utils.cmake
cpp_generator/: Generate.cpp  Parser.cpp  Parser.hpp
include/meta/: Factory.hpp  Field.hpp  Function.hpp  IMetadata.hpp  Macro.hpp  Metadata.hpp  Property.hpp  Reflect.hpp  Taggable.hpp  Type.hpp  Utils.hpp  Value.hpp
include/reflect/: Factory.hpp  Generate.hpp  IReflected.hpp  Macro.hpp  Parser.hpp  Type.hpp
include/reflect/wrap/: Field.hpp  Function.hpp  Property.hpp  Reflected.hpp  Taggable.hpp  Value.hpp
meta/: config.json  main.py
meta/meta/: config.py  constants.py  generate.py  parser.py  types.py
python/: ex.py  main.py
python/reflect/: constants.py  generate.py  parser.py  types.py
reflect/: Factory.cpp  Factory.hpp  Generate.cpp  Generate.hpp  Macro.cpp  Macro.hpp  Parser.cpp  Parser.hpp  Reflect.cpp  Reflect.hpp  Type.cpp  Type.hpp  Uitils.cpp  Uitils.hpp
reflect/wrap/: Field.cpp  Field.hpp  Function.cpp  Function.hpp  Property.cpp  Property.hpp  Reflected.cpp  Reflected.hpp  Value.cpp  Value.hpp  Wrap.hpp
result/audio/: LiveAudio.reflect.hpp
result/drawing/: Allocator.reflect.hpp  Texture.reflect.hpp
src/meta/: Factory.cpp  Field.cpp  Function.cpp  Metadata.cpp  Property.cpp  Taggable.cpp  Type.cpp  Utils.cpp  Value.cpp
src/reflect/: Factory.cpp  Generate.cpp  Parser.cpp  Type.cpp  Utils.cpp
src/reflect/wrap/: Field.cpp  Function.cpp  Property.cpp  Reflected.cpp  Taggable.cpp  Value.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp
test/: CMakeLists.txt
test/src/: Test.hpp  Test.meta.cpp  Test.meta.hpp  Test.reflect.cpp  Test.reflect.hpp  main.cpp
test_parse/: Test.hpp  Test.reflect.hpp  test_file.hpp  test_file.reflect.hpp
to_parse/: test_file.hpp  test_file.reflect.hpp
